--- a/client/src/components/editor/QuillEditor.css
+++ b/client/src/components/editor/QuillEditor.css
@@ -3,15 +3,15 @@
   border: none !important;
   flex-grow: 1;
   flex-basis: 0;
+  height: 100%;
+  overflow: auto;
 }
 
 /* Customize the Quill editor toolbar */
 .ql-toolbar {
-  border: 1px solid #ccc;
+  border: 1px solid hsl(var(--border))!important;
   border-radius: 4px;
   margin-bottom: 10px;
-  position: sticky;
-  top: 0%;
   background-color: hsl(var(--sidebar-background));
   z-index: var(--high-z-index);
   display: flex;
@@ -24,7 +24,7 @@
   font-family: Arial, sans-serif;
   font-size: 14px;
   line-height: 1.5;
-  word-break: break-all; 
-  overflow-wrap: break-word; 
+  word-break: break-all;
+  overflow-wrap: break-word;
   white-space: normal;
 }
