--- a/client/src/index.css
+++ b/client/src/index.css
@@ -123,3 +123,18 @@
 .roboto {
   font-family: "Roboto", sans-serif;
 }
+::-webkit-scrollbar {
+	width: 14px;
+}
+::-webkit-scrollbar-track {
+	background-color: transparent;
+}
+::-webkit-scrollbar-thumb {
+	background-color: hsl(var(--muted));
+	border-radius: 1rem;
+	border: 2px solid transparent;
+	background-clip: content-box;
+}
+::-webkit-scrollbar-thumb:hover {
+	background-color: hsl(var(--muted-foreground));
+}
